# quasar-solver

./: .gitignore  README.md  pyproject.toml
examples/: 01_basic_tutorial.ipynb  01_getting_started.ipynb  02_advanced_usage.ipynb  02_tsp.ipynb  03_plotting.ipynb  basic_tutorial.ipynb  tsp.ipynb
src/quasar_solver/: __init__.py  engine.py  jit.py  plot.py  qubo.py  schedules.py  solver.py  utils.py
tests/: test_solver.py  test_solver_params.py
